--- a/agree/res/layout/activity_main.xml
+++ b/agree/res/layout/activity_main.xml
@@ -156,7 +156,7 @@
          android:id="@+id/imageView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:src="@drawable/shop_icon" 
+         android:src="@drawable/iconfont2" 
          android:visibility="invisible"/>
 
      <EditText
