--- a/agree/res/layout/activity_party_details.xml
+++ b/agree/res/layout/activity_party_details.xml
@@ -70,6 +70,27 @@
         android:layout_height="150dp"
         android:layout_below="@+id/relativeLayout1"
         android:layout_centerHorizontal="true" >
+        <com.baidu.mapapi.map.MapView
+         android:id="@+id/bmapView"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_alignParentTop="true"
+         android:clickable="true" 
+          />
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:ems="10" 
+            android:background="#f0ffffff"
+            android:gravity="center">
+
+            <requestFocus />
+        </EditText>
+
     </RelativeLayout>
 
     <TextView
