--- a/agree/res/layout/activity_party_details.xml
+++ b/agree/res/layout/activity_party_details.xml
@@ -79,7 +79,7 @@
           />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/edit_show"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
