--- a/agree/res/layout/activity_party_details.xml
+++ b/agree/res/layout/activity_party_details.xml
@@ -94,31 +94,27 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/PartyDetails_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/relativeLayout2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView4"
-        android:layout_centerVertical="true"
-        android:text="TextView" />
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textColor="#00aeae"
+        android:textSize="20.0sp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/PartyDetails_time"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="26dp"
-        android:text="参与" />
+        android:layout_marginTop="25dp"
+        android:text="参与"
+        android:textSize="17.0sp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -127,8 +123,9 @@
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="32dp"
-        android:text="未表态" />
+        android:layout_marginRight="30dp"
+        android:text="未表态"
+        android:textSize="17.0sp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -137,57 +134,71 @@
         android:layout_alignBaseline="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:text="拒绝" />
+        android:text="拒绝"
+        android:textSize="17.0sp" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/PartyDetails_did_not_say"
         android:layout_width="30.0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView10"
-        android:layout_alignBottom="@+id/textView10"
+        android:layout_alignBaseline="@+id/PartyDetails_tv_refuse"
+        android:layout_alignBottom="@+id/PartyDetails_tv_refuse"
         android:layout_alignLeft="@+id/textView8"
         android:gravity="center"
-        android:text="0" />
+        android:text="0"
+        android:textSize="17.0sp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/PartyDetails_tv_partake"
         android:layout_width="30.0dp"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView6"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="0" />
+        android:text="0"
+        android:textSize="17.0sp" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/PartyDetails_tv_refuse"
         android:layout_width="30.0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView9"
-        android:layout_alignBottom="@+id/textView9"
+        android:layout_alignBaseline="@+id/PartyDetails_tv_partake"
+        android:layout_alignBottom="@+id/PartyDetails_tv_partake"
         android:layout_alignRight="@+id/textView7"
         android:gravity="center"
-        android:text="0" />
+        android:text="0"
+        android:textSize="17.0sp" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/PartyDetails_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textSize="18.0sp" />
+
+    <TextView
+        android:id="@+id/PartyDetails_partake"
         android:layout_width="80.0dp"
         android:layout_height="80.0dp"
-        android:layout_below="@+id/textView9"
-        android:layout_marginTop="36dp"
-        android:layout_toLeftOf="@+id/textView5"
+        android:layout_alignBaseline="@+id/PartyDetails_refuse"
+        android:layout_alignBottom="@+id/PartyDetails_refuse"
+        android:layout_toLeftOf="@+id/PartyDetails_time"
         android:background="@drawable/login_selector"
         android:gravity="center"
         android:text="参与"
         android:textSize="18.0sp" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/PartyDetails_refuse"
         android:layout_width="80.0dp"
         android:layout_height="80.0dp"
-        android:layout_below="@+id/textView11"
-        android:layout_marginTop="36dp"
-        android:layout_toRightOf="@+id/textView10"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/PartyDetails_did_not_say"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/login_selector"
         android:gravity="center"
         android:text="拒绝"
