--- a/agree/res/layout/activity_newteam.xml
+++ b/agree/res/layout/activity_newteam.xml
@@ -114,6 +114,16 @@
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+			android:background="#aaaaaa"            
+            />
+
     </RelativeLayout>
 
     <ProgressBar
