--- a/agree/res/layout/activity_party_details.xml
+++ b/agree/res/layout/activity_party_details.xml
@@ -30,13 +30,14 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/PartyDetails_more_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/PartyDetails_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -70,27 +71,27 @@
         android:layout_height="250dp"
         android:layout_below="@+id/relativeLayout1"
         android:layout_centerHorizontal="true" >
+<!-- 代码中已经new出一个MapView -->
+<!--         <com.baidu.mapapi.map.MapView -->
+<!--             android:id="@+id/bmapView" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="match_parent" -->
+<!--             android:layout_alignParentTop="true" -->
+<!--             android:clickable="true" /> -->
 
-        <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:clickable="true" />
+<!--         <EditText -->
+<!--             android:id="@+id/edit_show" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="50dp" -->
+<!--             android:layout_alignParentBottom="true" -->
+<!--             android:layout_centerHorizontal="true" -->
+<!--             android:background="#aaffffff" -->
+<!--             android:ems="10" -->
+<!--             android:enabled="false" -->
+<!--             android:gravity="center" > -->
 
-        <EditText
-            android:id="@+id/edit_show"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:background="#aaffffff"
-            android:ems="10"
-            android:enabled="false"
-            android:gravity="center" >
-
-            <requestFocus />
-        </EditText>
+<!--             <requestFocus /> -->
+<!--         </EditText> -->
     </RelativeLayout>
 
     <RelativeLayout
@@ -221,7 +222,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="80dp"
-        android:background="@drawable/login_selector"
+        android:background="@drawable/ok_2"
         android:gravity="center"
         android:text="参与"
         android:textSize="18.0sp" />
@@ -233,7 +234,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="40dp"
         android:layout_toRightOf="@+id/PartyDetails_partake"
-        android:background="@drawable/login_selector"
+        android:background="@drawable/ok_2"
         android:gravity="center"
         android:text="拒绝"
         android:textSize="18.0sp" />
