--- a/agree/res/layout/activity_more.xml
+++ b/agree/res/layout/activity_more.xml
@@ -62,11 +62,12 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/more_cancel_layout"
             android:layout_width="match_parent"
             android:layout_height="50.0dp" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/more_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
