--- a/agree/res/layout/fragment_party.xml
+++ b/agree/res/layout/fragment_party.xml
@@ -92,4 +92,26 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/tab_party_prompt_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tab_party_title_layout"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+         >
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp"
+            android:text="你还没有参与过日程哦！"
+            android:textColor="#ff0000"
+            />
+
+    </RelativeLayout>
+
 </RelativeLayout>
