--- a/agree/res/layout/activity_login.xml
+++ b/agree/res/layout/activity_login.xml
@@ -49,7 +49,8 @@
             android:background="#ffffff"
             android:ems="10"
             android:gravity="center"
-            android:hint="请输入密码" />
+            android:hint="请输入密码" 
+            android:password="true"/>
 
         <TextView
             android:id="@+id/Login_OK"
