--- a/agree/res/values/dimens.xml
+++ b/agree/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="historyscore_tb">10dp</dimen>
-
+	<dimen name="ui_10_dip">10dip</dimen> 
 </resources>
