--- a/agree/res/layout/item_published_grida.xml
+++ b/agree/res/layout/item_published_grida.xml
@@ -12,4 +12,14 @@
         android:src="@drawable/ic_launcher" >
     </ImageView>
 
+    <TextView
+        android:id="@+id/tv_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:visibility="gone"
+        android:textColor="#D3D3D3" />
+
 </LinearLayout>
