--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:background="#ffffff" >
 
         <TextView
             android:id="@+id/textView1"
@@ -58,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/home_title"
+        android:background="#ffffff"
         android:columnWidth="90dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
