--- a/agree/res/layout/plugin_camera_select_imageview.xml
+++ b/agree/res/layout/plugin_camera_select_imageview.xml
@@ -26,8 +26,8 @@
         android:textOn="@null" />
      <Button
         android:id="@+id/choosedbt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30.0dp"
+        android:layout_height="30.0dp"
         android:background="@drawable/plugin_camera_choosed"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
