--- a/agree/res/layout/activity_map.xml
+++ b/agree/res/layout/activity_map.xml
@@ -3,8 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapActivity" 
-    android:background="#FFFFFF" 
-    >
+    tools:context=".MainActivity"
+    android:background="#FFFFFF" >
 
 </FrameLayout>
