--- a/agree/res/layout/activity_about_us.xml
+++ b/agree/res/layout/activity_about_us.xml
@@ -48,49 +48,67 @@
             android:background="#aaaaaa" />
     </RelativeLayout>
 
-    <ScrollView
-        android:id="@+id/scrollView1"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/aboutus_title"
         android:layout_centerHorizontal="true" >
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/aboutus_title"
-            android:layout_centerHorizontal="true" >
+            android:id="@+id/relativeLayout1"
+            android:layout_width="150.0dp"
+            android:layout_height="150.0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp" >
 
-            <TextView
-                android:id="@+id/myTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:textSize="17.0sp"
-                android:textColor="#808080"
-                android:text="ewrew000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000
-            000000000000000000000000000000000000000000000000000000000000000000000000000
-            
-            000000000000000" >
-            </TextView>
+            <ImageView
+                android:id="@+id/about_us_biju"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/about_us" />
         </RelativeLayout>
-    </ScrollView>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="60.0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relativeLayout1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="26dp"
+            android:text="必聚"
+            android:gravity="center"
+            android:textSize="20.0sp"
+            android:textColor="#000000"
+             />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:text="ver: 1.0 beta"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:textSize="15.0sp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:text="厦门必聚科技有限公司"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:textSize="20.0sp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
