--- a/agree/res/layout/item_published_grida.xml
+++ b/agree/res/layout/item_published_grida.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -8,8 +9,20 @@
         android:id="@+id/item_grida_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher" >
     </ImageView>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="TextView" 
+        android:textColor="#ffffff"
+        android:visibility="gone"/>
+
+</RelativeLayout>
