--- a/agree/res/layout/activity_binding_phone.xml
+++ b/agree/res/layout/activity_binding_phone.xml
@@ -29,13 +29,14 @@
             android:background="#aaaaaa" />
 
         <RelativeLayout
+            android:id="@+id/binding_phone_back_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/binding_phone_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -76,6 +77,7 @@
             android:gravity="center"
             android:hint="输入手机号码"
             android:phoneNumber="true"
+            android:maxLength="13"
             android:textSize="20.0sp" >
 
             <requestFocus />
