--- a/agree/res/layout/activity_user_setting.xml
+++ b/agree/res/layout/activity_user_setting.xml
@@ -35,7 +35,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
-                android:text="保存1"
+                android:text="保存"
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
         </RelativeLayout>
