--- a/agree/res/values/colors.xml
+++ b/agree/res/values/colors.xml
@@ -63,7 +63,7 @@
  <color name="goldenrod">#daa520</color><!--金麒麟色 --> 
  <color name="orchid">#da70d6</color><!--淡紫色 --> 
  <color name="thistle">#d8bfd8</color><!--蓟色 --> 
- <color name="lightgray">#d3d3d3</color><!--亮灰色 --> 
+ <color name="lightgray1">#d3d3d3</color><!--亮灰色 --> 
  <color name="lightgrey">#d3d3d3</color><!--亮灰色 --> 
  <color name="tan">#d2b48c</color><!--茶色 --> 
  <color name="chocolate">#d2691e</color><!--巧可力色 --> 
@@ -155,6 +155,8 @@
  <color name="none_color">#00000000</color>
  <color name="plugin_camera_black">#000000</color>
  <color name="albumback">#E1E0DE</color>
+ <color name="style_red">#ff4c41</color>
+ <color name="style_divider_color">#C9C7CD</color>
  <color name="style_red">#ff4c41</color>
  <color name="style_divider_color">#C9C7CD</color>
  <color name="darker_gray">#aaa</color>
