--- a/agree/res/layout/activity_add_buddy.xml
+++ b/agree/res/layout/activity_add_buddy.xml
@@ -75,7 +75,6 @@
             android:id="@+id/contact_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="22.0dp"
             android:cacheColorHint="#000000"
             android:divider="#00000000"
             android:fadingEdge="none"
@@ -83,7 +82,7 @@
             android:scrollingCache="false"
             android:visibility="visible" />
 
-        <com.BJ.utils.QuickAlphabeticBar
+        <!-- <com.BJ.utils.QuickAlphabeticBar
             android:id="@+id/fast_scroller"
             android:layout_width="22dp"
             android:layout_height="match_parent"
@@ -93,9 +92,9 @@
             android:background="#000000"
             android:scaleType="centerInside"
             android:src="@drawable/dic_background" >
-        </com.BJ.utils.QuickAlphabeticBar>
+        </com.BJ.utils.QuickAlphabeticBar> -->
 
-        <TextView
+        <!-- <TextView
             android:id="@+id/fast_position"
             android:layout_width="70dip"
             android:layout_height="70dip"
@@ -107,7 +106,7 @@
             android:padding="2dip"
             android:textColor="#404040"
             android:textSize="48dip"
-            android:visibility="invisible" />
+            android:visibility="invisible" /> -->
 
     </RelativeLayout>
 
