--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -54,18 +54,24 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <com.BJ.utils.GridViewWithHeaderAndFooter
-        android:id="@+id/home_gridview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/home_title"
-        android:background="#ffffff"
-        android:columnWidth="90dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:numColumns="2"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp" >
-    </com.BJ.utils.GridViewWithHeaderAndFooter>
+         android:layout_below="@+id/home_title"
+        android:layout_height="match_parent" >
+
+        <com.BJ.utils.GridViewWithHeaderAndFooter
+            android:id="@+id/home_gridview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:columnWidth="90dp"
+            android:gravity="center"
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp" >
+        </com.BJ.utils.GridViewWithHeaderAndFooter>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
