--- a/agree/res/layout/contact_list_item_2.xml
+++ b/agree/res/layout/contact_list_item_2.xml
@@ -16,34 +16,24 @@
             android:layout_alignParentBottom="true"
             android:background="#aaaaaa" />
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="50.0dp"
-            android:layout_height="50.0dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ad_loading_01"
-            android:visibility="invisible" 
-            />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/contact_list_2_OK"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:text="邀请加入"
+            android:gravity="center|left"
+            android:text="同意添加"
             android:padding="5.0dp"
-            android:background="@drawable/ok_click_selector"
             android:layout_marginTop="5.0dp"
             android:layout_marginBottom="5.0dp"
             android:textColor="#00e3e3"
             android:textSize="17.0sp" />
 
         <ImageView
-            android:id="@+id/contact_list_head"
+            android:id="@+id/contact_list_2_head"
             android:layout_width="50.0dp"
             android:layout_height="50.0dp"
             android:layout_marginLeft="20.0dp"
@@ -52,24 +42,18 @@
             />
 
         <TextView
-            android:id="@+id/contact_list_item_1_name"
+            android:id="@+id/contact_list_item_2_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/contact_list_head"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@+id/contact_list_head"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="19dp"
+            android:layout_toLeftOf="@+id/contact_list_2_OK"
+            android:layout_toRightOf="@+id/contact_list_2_head"
             android:gravity="left|center"
             android:singleLine="true"
             android:text="15614"
+            android:layout_marginRight="5.0dp"
             android:textAppearance="?android:textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/contact_list_item_1_name_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/contact_list_item_1_name"
-            android:layout_below="@+id/contact_list_item_1_name"
-            android:text="TextView" />
 
     </RelativeLayout>
 
