--- a/agree/res/layout/teamsetting_gridview_item.xml
+++ b/agree/res/layout/teamsetting_gridview_item.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="110.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
 
