--- a/agree/res/layout/fragment_friends.xml
+++ b/agree/res/layout/fragment_friends.xml
@@ -50,10 +50,17 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/friends_add_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/friends_title"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+         >
+        
+        <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/friends_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <ListView
             android:id="@+id/friends_listview"
@@ -63,6 +70,29 @@
             android:layout_centerHorizontal="true"
             >
         </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/friends_add_tishi_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/friends_title"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+         >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:text="你还没有添加任何的好友！" 
+            android:textColor="#ff0000"
+            />
 
     </RelativeLayout>
 
